@@ -3,17 +3,13 @@ package ru.stqa.pft.addressbook.tests;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import com.thoughtworks.xstream.XStream;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+import org.testng.annotations.*;
 import ru.stqa.pft.addressbook.model.GroupData;
 import ru.stqa.pft.addressbook.model.Groups;
 
-
 import java.io.*;
-import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -22,25 +18,24 @@ public class GroupCreationTests extends TestBase {
 
     @DataProvider
     public Iterator<Object[]> validGroupsFromXml() throws IOException {
-        List<Object[]> list = new ArrayList<Object[]>();
-        try (BufferedReader reader = new BufferedReader(new FileReader(new File("src/test/resources/groups.xml")))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/groups.xml"))) {
             String xml = "";
             String line = reader.readLine();
             while (line != null) {
                 xml += line;
                 line = reader.readLine();
             }
-            XStream xstream = new XStream();
-            xstream.processAnnotations(GroupData.class);
-            List<GroupData> groups = (List<GroupData>) xstream.fromXML(xml);
-            return groups.stream().map((g) -> new Object[] {g}).collect(Collectors.toList()).iterator();
+            XStream xStream = new XStream();
+            xStream.processAnnotations(GroupData.class);
+            xStream.allowTypes(new Class[]{GroupData.class});
+            List<GroupData> groups = (List<GroupData>) xStream.fromXML(xml);
+            return groups.stream().map(g -> new Object[]{g}).toList().iterator();
         }
     }
 
     @DataProvider
     public Iterator<Object[]> validGroupsFromJson() throws IOException {
-        List<Object[]> list = new ArrayList<Object[]>();
-        try (BufferedReader reader = new BufferedReader(new FileReader(new File("src/test/resources/groups.json")))) {
+        try (BufferedReader reader = new BufferedReader(new FileReader("src/test/resources/groups.json"))) {
             String json = "";
             String line = reader.readLine();
             while (line != null) {
@@ -48,12 +43,12 @@ public class GroupCreationTests extends TestBase {
                 line = reader.readLine();
             }
             Gson gson = new Gson();
-            List<GroupData> groups = gson.fromJson(json, new TypeToken<List<GroupData>>(){}.getType());
-            return groups.stream().map((g) -> new Object[] {g}).collect(Collectors.toList()).iterator();
+            List<GroupData> groups = gson.fromJson(json, new TypeToken<List<GroupData>>(){}.getType()); //List<GroupData>.class
+            return groups.stream().map(g -> new Object[]{g}).toList().iterator();
         }
     }
 
-    @Test(dataProvider = "validGroupsFromJson")
+    @Test(dataProvider = "validGroupsFromXml", enabled = true)
     public void testGroupCreation(GroupData group) throws Exception {
         app.goTo().groupPage();
         Groups before = app.db().groups();
@@ -64,20 +59,16 @@ public class GroupCreationTests extends TestBase {
                 before.withAdded(group.withId(after.stream().mapToInt((g) -> g.getId()).max().getAsInt()))));
     }
 
-    @Test (enabled = false)
+    @Test(enabled = false)
     public void testBadGroupCreation() throws Exception {
         app.goTo().groupPage();
-        Groups before = app.db().groups();
-        GroupData group = new GroupData().withName("test2");
+        Groups before = app.group().all();
+        GroupData group = new GroupData().withName("test1'");
         app.group().create(group);
         assertThat(app.group().count(), equalTo(before.size()));
-        Groups after = app.db().groups();
+        Groups after = app.group().all();
         assertThat(after, equalTo(before));
-        verifyGroupListInUI();
+        verifyGroupListInUI(); //В конфигурации запуска -DverifyUI=true
     }
 
 }
-
-
-
-
